# PyTaiko-Mini

./: .gitignore  PyTaiko.py  README.md  config.toml  pyproject.toml
.github/workflows/: python-app.yml  tests.yml
Songs/13 Recommended/: box.def
Songs/14 Favorites/: box.def
Songs/15 Recently Played/: box.def
Songs/16 Difficulty Sort/: box.def
Songs/18 Search/: box.def
libs/: __init__.py  audio.py  background.py  chara_2d.py  config.py  file_navigator.py  global_data.py  global_objects.py  song_hash.py  texture.py  tja.py  tja2.py  utils.py
libs/bg_objects/: dancer.py
libs/parsers/: tja.py
scenes/: entry.py  game.py  game2.py  loading.py  settings.py  song_select.py  title.py
scenes/ai_battle/: game.py  song_select.py
scenes/dan/: game_dan.py
scenes/practice/: game.py
scenes/two_player/: game.py
test/libs/: test_animation.py  test_audio.py  test_global_data.py  test_global_objects.py  test_screen.py  test_texture.py
